Agregados Introduccion, Puntos 1 y 2, Normas APA en css

--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
 </head>
 <body>
 <DIV ID="contenido">	
+	<p class="alignright">Redactado jueves 7 de enero de 2021</p><br>
 	<div id="banner">
 		<i class="material-icons">psychology</i>		
 		<div>
-			<h6>CONSULTORIA TECNICA PARA PYMES</h6>
+			<h6>PROPUESTA DE CONSULTORIA TECNICA PARA PYMES</h6>
 			<h1>INTEGRACION A LA INDUSTRIA 4.0</h1>
 		</div>				
 	</div> <br><br>
@@ -26,73 +27,260 @@
 				DESCARGAR PDF
 			</a>
 	</h3> <hr><br>
+	<h3>Introducci&oacute;n</h3><br>
 	<p>
-			Se entiende “Industria 4.0” como la colección de tecnologías que usan como eje central la
-			inteligencia artificial y grandes volúmenes de datos (Big Data).
-			El término fue acuñado en Alemania por primera vez por el Ministerio Federal de Educación e
-			Investigación (BMBF), como proyecto del gobierno alemán en el desarrollo de un nuevo paradigma
-			de la industria manufacturera en modelos de negocio y automatización industrial. Se hizo uso
-			público del término durante la feria de Hannover Messe Industrie en 2011 mostrándolo como una
-			nueva etapa de desarrollo, la cuarta, contando desde la Primera Revolución Industrial del siglo
-			XVIII.	
-	</p><br>
-	<div class="separator wrap row evenly">
-		<p class="box center small"><img src="images/CC/download.jpg"> Industria 4.0 imagen creative commons</p>
-		<p class="box center small"><img src="images/CC/download2.jpg"> Industria 4.0 imagen creative commons</p>
-		<p class="box center small"><img src="images/CC/download3.jpg"> Industria 4.0 imagen creative commons</p>
-		<p class="box center small"><img src="images/CC/download3.jpg"> Industria 4.0 imagen creative commons</p>		
-	</div> <br>
+		El término <b>Industria 4.0</b> se refiere a un nuevo modelo de organización 
+		y de control de la cadena de valor a través del ciclo de vida del producto 
+		y a lo largo de los sistemas de fabricación apoyado y hecho posible por las 
+		tecnologías de la información. <br>
+		<i>Según José Luis del Val Román de la Universidad de Deusto de la Ciudad de Bilbao España.</i>
+	</p><p>
+		Se entiende como la <b>colección de tecnologías que usan como eje central la
+		inteligencia artificial, Cloud Computing, grandes volúmenes de datos (Big Data) entre otros.</b>.		
+	</p><p>
+		El <b>objetivo principal</b> de esta propuesta de consultoria es el de volver competitivas a las empresas brindando acceso a las 
+		nuevas herramientas tecnologías, iniciando así la integración a la industria 4.0 a través 
+		de uno de los ejes principales de toda empresa, servicios de publicidad y formas de llegar a clientes, 
+		a través del manejo de las <b>notificaciones HUB</b>.
+	</p><p>
+		Nuestro enfoque es <b>apoyar a las PYMES</b> en cuanto a la eficiencia operacional y reducción de 
+		costos de la empresa, mediante el desarrollo de un nuevo modelo de negocio apoyado por las nuevas tecnologías.
+	</p><p>
+		La estrategia de las PYMES debe estar orientada a potenciar el uso de los canales electrónicos, 
+		logrando ser más eficientes para en el manejo de las notificaciones. Un servicio de notificaciones HUB 
+		mejora la capacidad y calidad de publicidad de las PYMES, permitiendo una comunicación efectiva con sus 
+		clientes nuevos y potenciales.
+	</p>
+	<ul>
+		<li>
+			<p>
+				<b>¿Qué ventajas posee Notificaciones HUB sobre viejos paradigmas?</b>
+				<br>
+				Ahorra el costo de mano de obra necesario para actividades publicitarias, con un sistema inteligente, 
+				automatizado e independiente de un operador, el cual solo necesita instrucciones simples para funcionar.
+				Elimina la necesidad de hacerse notar a través de volantes o cupones, y se comunica directamente con el 
+				cliente a través del teléfono móvil. Dicha comunicación es continua y permanente con el cliente el cual 
+				recibirá notificaciones periódicamente.				
+			</p>
+		</li><li>
+			<p>
+				<b>¿Qué riesgos hay de no adoptar nuevos paradigmas?</b>
+				<br>
+				La falta de los recursos económicos, y ahora con las condiciones actuales de pandemia por el COVID-19 
+				a nivel mundial, es necesario diversificarse más que nunca y superar los problemas que acogen a las PYMES.  
+				El poder alcanzar clientes es una necesidad fundamental de toda empresa de comercio; el no hacerlo 
+				significa renunciar a su única fuente de ingresos y solo le esperaría el agote de capital 
+				y cierre de actividades
+			</p>
+		</li>
+	</ul>
 	<br>
+	<b>En esta pagina aprendera acerca de:</b><br><br>
+	<div class="separator wrap row evenly">							
+		<p class="box center small">
+			<a><img src="images/CC/download2.jpg"> 
+			1. ¿Qu&eacute; son Notificaciones HUB de AZURE?</a>
+		</p>
+		<p class="box center small">
+			<a><img src="images/CC/download.jpg"> 
+			ANALISIS Y TABULACION: 
+			2. ¿Qu&eacute; tan extendido es el uso de tecnologias 4.0 en El Salvador?</a>
+		</p>
+		<p class="box center small">
+			<a><img src="images/CC/download2.jpg"> 
+			INFORMACION PRELIMINAR DE LA PROPUESTA TECNICA: 
+			3. ¿Qu&eacute; caracteristicas posee Notificaciones HUB de AZURE? ¿Ventajas sobre la competencia?</a>
+		</p>
+		<p class="box center small">
+			<a><img src="images/CC/download3.jpg"> 
+			PROPUESTA TECNICA: 
+			4. ¿Com&oacute; implementar una soluci&oacute;n tecnologica 4.0 con Notificaciones HUB de AZURE?</a>
+		</p>		
+		<p class="box center small">
+			<a><img src="images/CC/download.jpg"> 
+			5. ¿Dond&eacute; puedo informarme m&aacute;s sobre el tema?</a>
+		</p>
+	</div> <br>	
+	</p><br>
+	
+	<!-- /////////////////////////////////////////////////////////////////////////////// -->
+	<hr><br>
+	<h3>1. ¿Qu&eacute; son Notificaciones HUB de AZURE?</h3><br>
+	<p>	
+		<b>Microsoft Azure Portal</b> es una consola unificada basada en web que proporciona una alternativa a las 
+		herramientas de línea de comandos. Con Azure Portal, puede administrar la suscripción con Microsoft Azure 
+		mediante una interfaz gráfica de usuario. Puede compilar, administrar y supervisar todo, desde aplicaciones
+		web sencillas hasta complejas implementaciones en la nube. Se pueden crear paneles personalizados para 
+		vistas organizadas de recursos. 
+	</p><p>	
+		El Portal Microsoft Azure proporcionar alta disponibilidad continua que tiene una presencia en cada centro 
+		de datos de Azure, y evita que la red se vuelva lenta.  Azure Portal no deja de actualizarse y no requiere 
+		tiempo de inactividad para las actividades de mantenimiento.
+	</p><p>	
+		Azure Notificaciones HUBS proporciona un motor de inserción de escalabilidad horizontal y fácil uso que le 
+		permite enviar notificaciones a cualquier plataforma (iOS, Android, Windows, etc.) desde cualquier back-end 
+		(en la nube o local). Notificaciones HUBSs funciona muy bien tanto para escenarios empresariales como de 
+		consumidores. Estos son algunos escenarios de ejemplo:
+	</p>
+	<ul>
+		<li><p>
+			Enviar notificaciones de noticias de última hora a millones de usuarios con baja latencia.
+		</p></li>
+		<li><p>
+			Enviar cupones basados en la ubicación a segmentos de usuarios interesados.
+		</p></li>
+		<li><p>
+			Enviar notificaciones relacionadas con eventos a usuarios o grupos para aplicaciones de medios, deportivas, de finanzas o de juegos.
+		</p></li>
+	</ul>
+	</p><p>	
+		<b>¿Qu&eacute; son Notificaciones PUSH?</b><br>
+	</p><p>	
+		Las notificaciones push son una forma de comunicación de aplicación a usuario, en la que los usuarios de 
+		aplicaciones móviles reciben notificaciones que contienen determinada información que el usuario desea, 
+		esta generalmente se muestra en un cuadro de diálogo o una ventana emergente en el dispositivo móvil. 
+	</p><p>	
+		Las notificaciones  PUSH son vitales  para  las  aplicaciones de consumidor, ya que son las que aumentan el 
+		uso y la interacción de las aplicaciones, así como para las aplicaciones empresariales, ya que comunican 
+		información empresarial actualizada. Es la mejor forma de comunicación de aplicación a usuario porque ahorra 
+		energía para los dispositivos móviles, es flexible para los remitentes de notificaciones y está disponible 
+		cuando las aplicaciones correspondientes no están activas.
+	</p>	
+		
+	</ul>	
+	<!-- /////////////////////////////////////////////////////////////////////////////// -->
+	<hr><br>
+	<h5>2. INFORMACION PRELIMINAR DE LA PROPUESTA TECNICA: </h5>
+	<h3>¿Qu&eacute; caracteristicas posee Notificaciones HUB de AZURE? ¿Ventajas sobre la competencia?</h3><br>
+	<p>
+		<b>CARACTERISTICAS GENERALES DE LA PROPUESTA</b>
+	</p>	
+	<ul>
+		<li><p>
+			<b>PORTABLE.</b> Capaz de llegar a todas las plataformas importantes: iOS, Android, Windows, Kindle, Baidu, entre otras.
+		</p></ii>
+		<li><p>
+			<b>ACCESIBLE.</b> Uso de cualquier back-end, en la nube o de forma local
+		</p></ii>
+		<li><p>
+			<b>EFICAZ.</b> Rápida difusión de notificaciones de inserción a millones de dispositivos móviles con una única llamada de API
+		</p></ii>
+		<li><p>
+			<b>DINAMICA.</b> Adaptable en función del cliente, creando segmentos o subgrupos específicos para fines promocionales o de participación, permitiendo categorizar clientes según su idioma, ubicación, edades entre otros.
+		</p></ii>
+		<li><p>
+			<b>ESCALABLE.</b> Capaz de llegar al momento a millones de nuevos dispositivos móviles 
+		</p></ii>
+	</ul>
+	<p>
+		<b>VENTAJAS SOBRE LA COMPETENCIA</b>
+	</p>
+	<ul>
+		<li><p>
+			Sin costos iniciales. Sin tarifas de cancelación. Pague solo lo que necesite
+		</p></ii>
+		<li><p>	
+			Es una solución de infraestructura en servicio, para facilitar las notificaciones masivas y atreves de la nube.
+		</p></li>
+		<li><p>	
+			Aumento o disminución de los recursos necesarios, con alta disponibilidad desde cualquier parte, para la realización de tareas como: Insertar contenido promocional en aplicaciones para ponerse en contacto y comercializar con clientes, Informar a los usuarios sobre eventos empresariales como nuevos mensajes o elementos de trabajo.
+		</p></li>
+		<li><p>	
+			Enviar códigos para Multi-Factor Authentication.
+		</p></li>
+		<li><p>	
+			Comprueba la disponibilidad del Notificaciones HUBS especificado en un espacio de nombres.	
+		</p></li>
+		<li><p>	
+			Crea o actualiza las Notificaciones HUBS en un espacio de nombres.
+		</p></li>
+		<li><p>	
+			Crea/Actualiza una regla de autorización para Notificaciones HUBS.
+		</p></li>
+		<li><p>	
+			Elimina un centro de notificaciones asociado a un espacio de nombres.
+		</p></li>
+		<li><p>	
+			Elimina una regla de autorización Notificaciones HUBS.
+		</p></li>
+		<li><p>	
+			Enumera los centros de notificaciones asociados a un espacio de nombres.
+		</p></li>
+		<li><p>	
+			Obtiene una regla de autorización para un Notificaciones HUBS por nombre.
+		</p></li>
+		<li><p>	
+			Enumera las credenciales asociadas a un centro de notificaciones.
+		</p></li>
+		<li><p>	
+			Enumera los centros de notificaciones asociados a un espacio de nombres.
+		</p></li>
+		<li><p>	
+			Obtiene las reglas de autorización para un Notificaciones HUBS.
+		</p></li>
+		<li><p>	
+			Obtiene la cadena de conexión primaria y secundaria a Notificaciones HUBS
+		</p></li>
+		<li><p>	
+		Regenera las claves primarias/secundarias a la regla de autorización Notificaciones HUBS.
+		</p></li>
+	</ul>
+	
+	<!-- /////////////////////////////////////////////////////////////////////////////// -->
+	<hr><br>
+	<h5>3. PROPUESTA TECNICA: </h5>
+	<h3>¿Com&oacute; implementar una soluci&oacute;n tecnologica 4.0 con Notificaciones HUB de AZURE?</h3><br>
 	<div class="box marginleft medium">
 		<b>Tabla de contenido</b><br>		
 		<ul>
-			<li><a>	1. CAPÍTULO I PLANTEAMIENTO DEL PROBLEMA	</a> </li>
-			<li><a>	1.1. ENUNCIADO DEL PROBLEMA.	</a> </li>
-			<li><a>	1.2. JUSTIFICACIÓN DE LA INVESTIGACIÓN.	</a> </li>
-			<li><a>	1.3. ALCANCES Y LIMITACIONES DE LA INVESTIGACIÓN.	</a> </li>
-			<li><a>	1.3.1. Alcances.	</a> </li>
-			<li><a>	1.3.2. Limitaciones.	</a> </li>
-			<li><a>	1.4. 1.5. DELIMITACIÓN DE LA INVESTIGACIÓN.	</a> </li>
-			<li><a>	1.4.1. Temporal.	</a> </li>
-			<li><a>	1.4.2. Geográfica.	</a> </li>
-			<li><a>	1.4.3. Social.	</a> </li>
-			<li><a>	1.5. 1.6. OBJETIVOS DE LA INVESTIGACIÓN.	</a> </li>
-			<li><a>	1.5.1. General.	</a> </li>
-			<li><a>	1.5.2. Específicos.	</a> </li>
-			<li><a>	2. CAPÍTULO II: MARCO TEÓRICO	</a> </li>
-			<li><a>	2.1. Industria 4.0	</a> </li>
-			<li><a>	13	</a> </li>
-			<li><a>	2.1.1. Historia de Industria 4.0	</a> </li>
-			<li><a>	2.1.2. Áreas de aplicación de Industria 4.0	</a> </li>
-			<li><a>	2.2. 2.2. NOTIFICACIONES HUBS DE AZURE	</a> </li>
-			<li><a>	2.2.1. Introducción a Azure	</a> </li>
-			<li><a>	2.2.2. Introducción a Notificaciones HUBS de AZURE	</a> </li>
-			<li><a>	2.2.3. Ventajas de usar Notificaciones HUBS de AZURE	</a> </li>
-			<li><a>	2.3. 2.3 Integración de planificación de recursos empresariales (ERP)	</a> </li>
-			<li><a>	2.3.1. Integración	</a> </li>
-			<li><a>	2.3.2. Niveles de Integración ERP	</a> </li>
-			<li><a>	3. CAPÍTULO III. MARCO METODOLÓGICO	</a> </li>
-			<li><a>	3.1. Metodología	</a> </li>
-			<li><a>	3.1.1. MODELOS ESTADÍSTICOS	</a> </li>
-			<li><a>	3.2. TIPO DE ESTUDIO.	</a> </li>
-			<li><a>	3.2.1. Técnica	</a> </li>
-			<li><a>	3.2.2. Instrumento	</a> </li>
-			<li><a>	3.3. POBLACIÒN Y MUESTRA.	</a> </li>
-			<li><a>	3.3.1. Población.	</a> </li>
-			<li><a>	3.3.2. Muestra.	</a> </li>
-			<li><a>	4. CAPÍTULO IV: TABULACIÓN ANÁLISIS E INTERPRETACIÓN DE RESULTADOS	</a> </li>
-			<li><a>	4.1. ENCUESTAS, REPRESENTACIÓN GRÁFICA Y ANÁLISIS CUANTITATIVO DE	</a> </li>
-			<li><a>	RESULTADOS	</a> </li>
-			<li><a>	5. CAPÍTULO V: PROPUESTA DE MODELO DE CONSULTORÍA TÉCNICA	</a> </li>
-			<li><a>	5.1. ESQUEMA TEORICO	</a> </li>
-			<li><a>	14	</a> </li>
-			<li><a>	5.2. IMPLEMENTACION PRACTICA	</a> </li>
-			<li><a>	5.3. PORTAL WEB	</a> </li>
-			<li><a>	6. CAPITULO VI. CONCLUSIONES Y RECOMENDACIONES	</a> </li>
-			<li><a>	6.1. Conclusiones	</a> </li>
-			<li><a>	6.2. Recomendaciones	</a> </li>
+			<li><a>Prerrequisitos tecnicos</a> </li>			
+			<li><a>Ventajas sobre la competencia</a> </li>			
+			<li><a>PRERREQUISITORS</a> </li>
 		</ul>
-	</div>	
+	</div>
+	<br>
+	<p>
+		<b>Prerrequisitos tecnicos</b>
+	</p>
+	<ul>
+		<li><p>
+			<b>Suscripción de Azure</b> <br>
+			Puede crear una cuenta gratuita siguiendo este enlace:<br>
+			<a href="https://azure.microsoft.com/es-es/">
+			https://azure.microsoft.com/es-es/</a>
+		<li><p>
+			<b>Microsoft Visual Studio 2017 o posterior</b> <br>
+			Puede descargarlo gratuitamente siguiendo este enlace: <br>
+			<a href="https://visualstudio.microsoft.com/es/downloads/">
+			https://visualstudio.microsoft.com/es/downloads/</a>
+		<li><p>
+			<b>Herramientas de desarrollo de aplicaciones de la plataforma universal de Windows</b> <br>
+			Más información siguiendo este enlace:<br>
+			<a href="https://docs.microsoft.com/es-es/visualstudio/cross-platform/develop-apps-for-the-universal-windows-platform-uwp?view=vs-2019">
+			https://docs.microsoft.com/es-es/visualstudio/cross-platform/develop-apps-for-the-universal-windows-platform-uwp?view=vs-2019</a>
+		<li><p>
+			<b>Cuenta en la Tienda de Windows</b> <br>
+			Puede crear una de forma gratuita siguiendo este enlace: <br>
+			<a href="https://www.microsoft.com/es-sv/store/apps/windows">
+			https://www.microsoft.com/es-sv/store/apps/windows</a>
+		</p></li>
+	</ul>		
+		
+	<p>	
+	<p>	</p>
+	
+	<!-- /////////////////////////////////////////////////////////////////////////////// -->
+	<hr><br>
+	<h5>4. ANALISIS Y TABULACION: </h5>
+	<h3>¿Qu&eacute; tan extendido es el uso de tecnologias 4.0 en El Salvador?</h3><br>
+	<p>	</p>
+	
+	<!-- /////////////////////////////////////////////////////////////////////////////// -->
+	<hr><br>
+	<h3>5. ¿Dond&eacute; puedo informarme m&aacute; sobre el tema?</h3><br>
+	<p>	</p>
+	
+	
 			
 <!-- <div class="center"> -->
   <!-- <div class="hexagon"></div>   -->
