Mejoras al diseño

--- a/index.html
+++ b/index.html
@@ -76,28 +76,28 @@
 	</ul>
 	<br>
 	<b>En esta pagina aprendera acerca de:</b><br><br>
-	<div class="separator wrap row evenly">							
+	<div class="separator wrap column center">							
 		<p class="box center small">
-			<a><img src="images/CC/download2.jpg"> 
+			<a href="#cap1"><img src="images/CC/notificationhubs.png">  <br>
 			1. ¿Qu&eacute; son Notificaciones HUB de AZURE?</a>
 		</p>
 		<p class="box center small">
-			<a><img src="images/CC/download.jpg"> 
-			ANALISIS Y TABULACION: 
+			<a href="#cap2"><img src="images/CC/graficos.png"> <br>
+			ANALISIS Y TABULACION: <br>
 			2. ¿Qu&eacute; tan extendido es el uso de tecnologias 4.0 en El Salvador?</a>
 		</p>
 		<p class="box center small">
-			<a><img src="images/CC/download2.jpg"> 
-			INFORMACION PRELIMINAR DE LA PROPUESTA TECNICA: 
+			<a href="#cap3"><img src="images/CC/caracteristicas.jpg"> <br>
+			INFORMACION PRELIMINAR DE LA PROPUESTA TECNICA: <br>
 			3. ¿Qu&eacute; caracteristicas posee Notificaciones HUB de AZURE? ¿Ventajas sobre la competencia?</a>
 		</p>
 		<p class="box center small">
-			<a><img src="images/CC/download3.jpg"> 
-			PROPUESTA TECNICA: 
+			<a href="#cap4"><img src="images/CC/consultoria.jpg"> <br>
+			PROPUESTA TECNICA: <br>
 			4. ¿Com&oacute; implementar una soluci&oacute;n tecnologica 4.0 con Notificaciones HUB de AZURE?</a>
 		</p>		
 		<p class="box center small">
-			<a><img src="images/CC/download.jpg"> 
+			<a href="#cap5"><img src="images/CC/masinformacion.png"> <br>
 			5. ¿Dond&eacute; puedo informarme m&aacute;s sobre el tema?</a>
 		</p>
 	</div> <br>	
@@ -105,7 +105,9 @@
 	
 	<!-- /////////////////////////////////////////////////////////////////////////////// -->
 	<hr><br>
-	<h3>1. ¿Qu&eacute; son Notificaciones HUB de AZURE?</h3><br>
+	<a class="nolink" name="cap1">
+		<h3>1. ¿Qu&eacute; son Notificaciones HUB de AZURE?</h3><br>
+	</a>
 	<p>	
 		<b>Microsoft Azure Portal</b> es una consola unificada basada en web que proporciona una alternativa a las 
 		herramientas de línea de comandos. Con Azure Portal, puede administrar la suscripción con Microsoft Azure 
@@ -150,8 +152,10 @@
 	</ul>	
 	<!-- /////////////////////////////////////////////////////////////////////////////// -->
 	<hr><br>
-	<h5>2. INFORMACION PRELIMINAR DE LA PROPUESTA TECNICA: </h5>
-	<h3>¿Qu&eacute; caracteristicas posee Notificaciones HUB de AZURE? ¿Ventajas sobre la competencia?</h3><br>
+	<a class="nolink" name="cap2">
+		<h5>2. INFORMACION PRELIMINAR DE LA PROPUESTA TECNICA: </h5>
+		<h3>¿Qu&eacute; caracteristicas posee Notificaciones HUB de AZURE? ¿Ventajas sobre la competencia?</h3><br>
+	</a>
 	<p>
 		<b>CARACTERISTICAS GENERALES DE LA PROPUESTA</b>
 	</p>	
@@ -228,8 +232,10 @@
 	
 	<!-- /////////////////////////////////////////////////////////////////////////////// -->
 	<hr><br>
+	<a class="nolink" name="cap3">
 	<h5>3. PROPUESTA TECNICA: </h5>
 	<h3>¿Com&oacute; implementar una soluci&oacute;n tecnologica 4.0 con Notificaciones HUB de AZURE?</h3><br>
+	</a>
 	<div class="box marginleft medium">
 		<b>Tabla de contenido</b><br>		
 		<ul>
@@ -271,13 +277,17 @@
 	
 	<!-- /////////////////////////////////////////////////////////////////////////////// -->
 	<hr><br>
+	<a class="nolink" name="cap4">
 	<h5>4. ANALISIS Y TABULACION: </h5>
 	<h3>¿Qu&eacute; tan extendido es el uso de tecnologias 4.0 en El Salvador?</h3><br>
+	</a>
 	<p>	</p>
 	
 	<!-- /////////////////////////////////////////////////////////////////////////////// -->
 	<hr><br>
+	<a class="nolink" name="cap5">
 	<h3>5. ¿Dond&eacute; puedo informarme m&aacute; sobre el tema?</h3><br>
+	</a>
 	<p>	</p>
 	
 	
