--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
 				<img class="custom-icons" src="images/logo.ico">
 				UNIVERSIDAD MODULAR ABIERTA
 			</a>		
-			<a href="#">
+			<!--<a href="#">
 				<i class="material-icons">picture_as_pdf</i>		
 				DESCARGAR PDF
-			</a>
+			</a>-->
 	</h3> <hr><br>
 	<h3>Introducci&oacute;n</h3><br>
 	<p>
